@@ -3,7 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003, 2004 by Benno Senoner and Christian Schoenebeck   *
- *   Copyright (C) 2005, 2006 Christian Schoenebeck                        *
+ *   Copyright (C) 2005 - 2009 Christian Schoenebeck                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -78,9 +78,6 @@ namespace LinuxSampler {
 		  ParameterRegistrator() {
                       DeviceParameterFactory::Register<Parameter_T>(MidiInputDeviceFactory::ParameterFactories[Driver_T::Name()]);
 		  }
-                  ~ParameterRegistrator() {
-                      DeviceParameterFactory::Unregister<Parameter_T>(MidiInputDeviceFactory::ParameterFactories[Driver_T::Name()]);
-                  }
 	  };
 
 
